objects/IP_VCID_Component__c.object
<CustomObject>
    <fields>
        <fullName>CRM_DID__c</fullName>
        <description>to verify length is 30/40.</description>
        <label>CRM DID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER__c</fullName>
        <description>Daily Refresh. Converted VCID data from sub-component to component</description>
        <label>CUSTOMER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <description>Daily Refresh. Converted VCID data from sub-component to component</description>
        <label>DESCRIPTION</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIBRARY__c</fullName>
        <description>Daily Refresh. Converted VCID data from sub-component to component</description>
        <label>LIBRARY</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOKUP_CODE__c</fullName>
        <description>Daily Refresh. OIC IP Mapping Table</description>
        <label>LOOKUP_CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIC_IP_COMPONENT__c</fullName>
        <description>Daily Refresh. OIC IP Mapping Table</description>
        <label>OIC_IP_COMPONENT</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESS_ID__c</fullName>
        <description>Daily Refresh. VCID and CRM</description>
        <label>PROCESS_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGRAM__c</fullName>
        <description>Daily Refresh. Derived from PLM data</description>
        <label>PROGRAM</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHNOLOGY_GEOMETRY__c</fullName>
        <description>Daily Refresh. Converted VCID data from sub-component to component</description>
        <label>TECHNOLOGY_GEOMETRY</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VENDOR__c</fullName>
        <description>Daily Refresh. Converted VCID data from sub-component to component</description>
        <label>VENDOR</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>IP VCID Component</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IP VCID Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP VCID Component</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>